// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly desktop version 1`] = `
<Fragment>
  <div
    className="subtitle"
  >
    General
  </div>
  <SelectControl
    id="select-lang"
    label="Language"
    onChange={[MockFunction]}
    options={
      [
        {
          "label": "Deutsche",
          "selected": false,
          "value": "de",
        },
        {
          "label": "English",
          "selected": true,
          "value": "en",
        },
        {
          "label": "Español",
          "selected": false,
          "value": "es",
        },
        {
          "label": "繁體中文",
          "selected": false,
          "value": "zh-tw",
        },
        {
          "label": "日本語",
          "selected": false,
          "value": "ja",
        },
        {
          "label": "简体中文",
          "selected": false,
          "value": "zh-cn",
        },
      ]
    }
  />
  <SelectControl
    id="set-notifications"
    label="Desktop Notifications"
    onChange={[Function]}
    options={
      [
        {
          "label": "On",
          "selected": true,
          "value": "TRUE",
        },
        {
          "label": "Off",
          "selected": false,
          "value": "FALSE",
        },
      ]
    }
  />
</Fragment>
`;

exports[`should render correctly web version 1`] = `
<Fragment>
  <div
    className="subtitle"
  >
    General
  </div>
  <SelectControl
    id="select-lang"
    label="Language"
    onChange={[MockFunction]}
    options={
      [
        {
          "label": "Deutsche",
          "selected": false,
          "value": "de",
        },
        {
          "label": "English",
          "selected": true,
          "value": "en",
        },
        {
          "label": "Español",
          "selected": false,
          "value": "es",
        },
        {
          "label": "繁體中文",
          "selected": false,
          "value": "zh-tw",
        },
        {
          "label": "日本語",
          "selected": false,
          "value": "ja",
        },
        {
          "label": "简体中文",
          "selected": false,
          "value": "zh-cn",
        },
      ]
    }
  />
</Fragment>
`;
